--- a/dd_cv.css
+++ b/dd_cv.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Nunito|Playfair+Display&display=swap");
 
-/* Main text is monserrat*/
+/* Main text is Nunito*/
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Nunito", sans-serif;
   font-weight: 300;
   line-height: 1.3;
   color: #444;
@@ -22,6 +22,11 @@ sup {
   font-style: italic;
 }
 
+/* Make line breaks smaller */
+br {
+  line-height: 3px;
+}
+
 /* Avoid the breaking within a section */
 .blocks {
   break-inside: avoid;
@@ -36,10 +41,10 @@ sup {
 /* Customize some of the sizing variables */
 :root {
   --sidebar-width: 12rem; /* Shrink sidebar width  */
-  --sidebar-background-color: #f7fbff; /* Make sidebar blue */
+  --sidebar-background-color: #F7eee5; /* Make sidebar a Du Bois parchment color */
   --sidebar-horizontal-padding: 0.01in; /* Reduce sidebar padding */
   --decorator-outer-dim: 10px; /* Make position deliniating circles larger */
-  --decorator-border: 2px solid #bdd7e7; /* Make timeline a blue as well*/
+  --decorator-border: 2px solid #F7eee5; /* Make timeline a blue as well*/
 }
 
 .details .place {
@@ -60,32 +65,49 @@ sup {
   list-style-type: decimal;
 }
 
-/* Dont put the little fake list point in front of links */
-.aside li::before {
+/* Keep bullets for skills */
+/*[data-id="skills"] {
+  display: inline;
+}*/
+
+/* Dont put the little fake list point in front of links
+/* COMMENT THIS OUT TO PUT BULLETS BACK */
+/*.aside li::before {
   display: none;
-}
+}*/
+
+
 
 /* Move closer to start and up towards header */
 .aside ul {
-  padding-left: 1rem;
+  padding-left: 0.01rem;
 }
 
-.aside li::before {
+/* Add space between bullets */
+#skills ul li {
+  margin-bottom: 12px;
+}
+
+/* bullets for the bottom section only */
+[data-id="skills"] {
   position: relative;
   margin-left: -4.25pt;
   content: "• ";
 }
 
+
 /* Make sure elements in asside are centered and have a nice small text */
 .aside {
+  padding-top: .0002in;
   width: calc(var(--sidebar-width) + 9px);
   line-height: 1.2;
   font-size: 0.75rem;
+  background-color: #F7eee5;
 }
 
-/* Make little circle outline be a light blue */
+/* Make little circle outline be a parchment color */
 .decorator::after {
-  background-color: #08306b;
+  background-color: #F7eee5;
 }
 
 /* Remove the fake bullets from lists */
@@ -122,3 +144,15 @@ sup {
   margin: 0.5rem;
   box-shadow: 1px 1px 4px black;
 }
+
+/* Avoid the breaking within a section */
+.blocks {
+  break-inside: avoid;
+}
+
+#skills li::before {
+    position: relative;
+    margin-left: -1.25pt;
+    content: '• ';
+}
+
